Modified training checkpoint saving directory

--- a/configs/qlora_vit5/inferencing_configs.yaml.template
+++ b/configs/qlora_vit5/inferencing_configs.yaml.template
@@ -1,7 +1,7 @@
 model:
   model_name: "${MODEL_NAME:-VietAI/vit5-base}"
   dataset_name: "${DATASET_NAME:-nam194/vietnews}"
-  adapter_path: "${ADAPTER_PATH:-./qlora_vit5_baseline}"
+  adapter_path: "${ADAPTER_PATH}"
 
 generation:
   output_max_length: ${OUTPUT_MAX_LENGTH:-256}
